<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.jesus.gojoined.FormUsuario"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:background="?attr/colorPrimary"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"/>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10sp"
        android:layout_marginRight="10sp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:id="@+id/textLogin"
                android:text="@string/txtLogin"
                android:layout_marginTop="20dp"
                android:textColor="?attr/colorPrimary"/>

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/e_login"
                android:layout_marginTop="20dp"
                android:ems="10"/>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/nom_usuario"
                android:id="@+id/textView4"
                android:textColor="?attr/colorPrimary"
                android:layout_marginTop="20dp"/>

            <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:layout_marginTop="20dp"
                    android:id="@+id/e_nombre"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:id="@+id/textApellidos"
                android:text="@string/txtApellidos"
                android:layout_marginTop="20dp"
                android:textColor="?attr/colorPrimary"/>

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/e_apellidos"
                android:layout_marginTop="20dp"
                android:ems="10"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/telefono_usuario"
                android:id="@+id/textView6"
                android:layout_marginTop="20dp"
                android:layout_below="@+id/textView5"
                android:layout_alignParentStart="true"
                android:textColor="?attr/colorPrimary"
                android:layout_alignParentLeft="true" />

            <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/e_telefono"
                    android:layout_marginTop="20dp"
                    android:ems="10"/>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/passwd_usuario"
                android:id="@+id/textView5"
                android:layout_marginTop="20dp"
                android:layout_below="@+id/textView4"
                android:layout_alignParentStart="true"
                android:textColor="?attr/colorPrimary"
                android:layout_alignParentLeft="true" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/e_passwd"
                android:layout_marginTop="20dp"
                android:ems="10" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/txtCategoria"
                android:id="@+id/textView17"
                android:layout_marginTop="20dp"
                android:layout_below="@+id/textView6"
                android:layout_alignParentStart="true"
                android:textColor="?attr/colorPrimary"
                android:layout_alignParentLeft="true" />

            <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/e_categoria"
                    android:layout_marginTop="20dp"
                    android:ems="10"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="50sp"
                android:id="@+id/txtspace" />

        </TableRow>

    </TableLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="10sp"
        android:layout_marginRight="10sp">

        <Button
            android:layout_height="wrap_content"
            android:text="@string/btn_guardar"
            android:id="@+id/btn_guardar"
            android:textColor="?attr/colorPrimary"
            android:foregroundGravity="center_vertical|center_horizontal|center"
            android:layout_weight="1"
            android:layout_width="10sp" />

        <Button
            android:layout_height="wrap_content"
            android:text="@string/btn_cancelar"
            android:id="@+id/btn_cancelar"
            android:textColor="?attr/colorPrimary"
            android:foregroundGravity="center_vertical|center_horizontal|center"
            android:layout_weight="1"
            android:textAlignment="center"
            android:layout_width="10sp" />
    </LinearLayout>


</LinearLayout>
