<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <!-- Parte superior -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="40">
        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"/>

        <ImageView
            android:id="@+id/cabecera"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="30"
            android:layout_marginBottom="15dp"
            android:background="?attr/colorPrimary"/>

        <TextView
            android:id="@+id/titulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/modificarUsuario"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_marginBottom="48dp"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="16dp"
            android:textColor="@android:color/white" />

    </RelativeLayout>

    <!-- Datos de la meta -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="70"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/usuario_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/usuario"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="?attr/colorPrimary"
                android:textSize="18dp" />
            <EditText
                android:id="@+id/edit_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/usuario_label"
                android:text="usuario"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:layout_marginBottom="10dp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/fecha_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/e_direccion"
                android:text="@string/passwd_usuario"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="?attr/colorPrimary"
                android:textSize="18dp" />
            <EditText
                android:id="@+id/edit_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/fecha_label"
                android:text="password"
                android:layout_marginBottom="10dp"
                android:textAppearance="?android:attr/textAppearanceSmall" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/nombre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/edit_usuario"
                android:text="@string/nom_usuario"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="?attr/colorPrimary"
                android:textSize="18dp" />
            <EditText
                android:id="@+id/edit_nombre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:layout_marginBottom="10dp"
                android:text="nombre"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/txtApellidos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/edit_usuario"
                android:text="@string/txtApellidos"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="?attr/colorPrimary"
                android:textSize="18dp" />
            <EditText
                android:id="@+id/edit_apellidos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:layout_marginBottom="10dp"
                android:text="apellidos"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/telefono_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/edit_usuario"
                android:text="@string/telefono_usuario"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="?attr/colorPrimary"
                android:textSize="18dp" />
            <EditText
                android:id="@+id/edit_telefono"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="telefono"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:layout_marginBottom="10dp" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/categoria_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtCategoria"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="?attr/colorPrimary"
                android:textSize="18dp" />
            <EditText
                android:id="@+id/edit_categoria"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="categoria"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:layout_marginBottom="10dp" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|center_horizontal|center">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/guardar"
                android:id="@+id/btn_guardar"
                android:textColor="?attr/colorPrimary"
                android:foregroundGravity="center_vertical|center_horizontal|center"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>