<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.jesus.gojoined.LoginActivity"
    android:background="@color/colorPrimary"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="0.24">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/titulo"
            android:id="@+id/textView7"
            android:textColor="#ffffff"
            android:textStyle="bold|italic"
            android:theme="@android:style/Animation"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:typeface="serif"
            android:gravity="center_vertical|center_horizontal|center"
            android:layout_gravity="center_vertical|center_horizontal"
            android:textSize="35sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:weightSum="1">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/usuario"
            android:id="@+id/textView"
            android:gravity="center"
            android:textColor="@android:color/background_light"
            android:layout_marginTop="30dp"
            android:typeface="serif"
            android:layout_gravity="center_vertical|center_horizontal"
            android:layout_weight="1"
            android:textSize="25sp"/>

        <EditText
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:id="@+id/txtusuario"
            android:textColor="#ffffff"
            android:ellipsize="start"
            android:layout_gravity="center_vertical|center_horizontal"
            android:textAlignment="center"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="1">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/passwd"
            android:id="@+id/textView2"
            android:textColor="@android:color/background_light"
            android:layout_gravity="center_vertical|center_horizontal"
            android:gravity="center"
            android:typeface="serif"
            android:layout_weight="1"
            android:textSize="25sp" />

        <EditText
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/txtpassword"
            android:textColor="#ffffff"
            android:layout_gravity="center_vertical|center_horizontal"
            android:textAlignment="center"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="25dp"
        android:layout_weight="1">
        <Button
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/btn_entrar"
            android:id="@+id/btn_entrar"
            android:textColor="?attr/colorPrimary"
            android:background="#ffffff"
            android:layout_marginTop="40dp"
            android:layout_gravity="center_vertical|center_horizontal"
            android:gravity="center"/>
    </LinearLayout>
</LinearLayout>
